# terrain

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
docs/: claude-code-charter-prompt.md  design-recommendations.md  first-prompt.md
scripts/: backtest_prescore.py  migrate_sqlite.py  smoke_test_harvester.py
terrain/api/: main.py
terrain/api/routes/: candidates.py  interesting_companies.py  opportunities.py  pipeline.py
terrain/config/: settings.py
terrain/models/: candidate.py  interesting_company.py  opportunity.py  pipeline.py
terrain/pipeline/: base.py  cover_letter.py  dedup.py  prescore.py  promoter.py  scheduler.py  scorer.py
terrain/pipeline/harvest/: base.py  linkedin.py  stage.py
terrain/providers/ai/: anthropic.py  base.py  ollama.py
terrain/providers/db/: base.py  mongo.py
tests/: conftest.py  test_migration.py
tests/api/: test_health.py  test_opportunities.py  test_pipeline_routes.py
tests/config/: test_settings.py
tests/integration/: test_api_integration.py  test_e2e.py  test_mongo_integration.py
tests/models/: test_candidate.py  test_opportunity.py  test_pipeline.py
tests/pipeline/: test_cover_letter.py  test_dedup.py  test_harvester.py  test_promoter.py  test_scheduler.py  test_scorer.py
tests/providers/: test_anthropic.py  test_mongo.py  test_ollama.py
ui/: DESIGN.md  index.html  package-lock.json  package.json
ui/src/: App.tsx  index.css
ui/src/api/: candidates.ts  client.ts  health.ts  interestingCompanies.ts  opportunities.ts  pipeline.ts
ui/src/components/: Badge.tsx  Card.tsx  (+11 more)
(+11 files in other folders)
